--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="main"><b>Добрый день!</b>
         <br>У&nbsp;нас&nbsp;Вы сможете приобрести себе настоящего верного друга! Который вас не&nbsp;съест <s>наверное</s>.
         <br>Все животные у&nbsp;нас привиты и&nbsp;полностью здоровы.
-        <br>А&nbsp;наши цены просто обалденье!
+        <br>А&nbsp;нашw цены просто обалденье!
     </p>
     <hr>
     <div class="footer"><footer>Все права защищены&nbsp;&copy;</footer></div>
